# Kernel64Patcher

./: Automatic-build.sh  Kernel64Patcher.c  Makefile.am  README.md  configure.ac  patchfinder64.c
Kernel64Patcher/: Makefile.am  main.cpp
